# redis_but_cooler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  test.py
src/: main.cpp
src/db/: Command.hpp  Database.cpp  Database.hpp  TTL.hpp
src/protocol/: RESPParser.cpp  RESPParser.hpp  RESPSerializer.cpp  RESPSerializer.hpp
src/server/: Buffer.hpp  Connection.cpp  Connection.hpp  Epoll.cpp  Epoll.hpp  EventLoop.cpp  EventLoop.hpp  Server.cpp  Server.hpp  Socket.cpp  Socket.hpp
src/util/: Errors.hpp  Logger.hpp  Time.hpp
